build: update go version in dockerfile.prod and go.mod to 1.24

--- a/.dockerignore
+++ b/.dockerignore
@@ -27,3 +27,14 @@ Dockerfile
 # OS files
 .DS_Store
 Thumbs.db
+
+# Build artifacts
+favicon
+favicon.db
+
+# Go build cache
+.cache/
+
+# Test coverage files
+*.coverprofile
+coverage.out
