--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,7 +22,7 @@ WORKDIR /app
 
 COPY --from=builder /app/favicon .
 
-RUN mkdir -p /app/data && chown favicon:favicon /app/data
+RUN chown favicon:favicon /app
 
 USER favicon
 
