--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -37,6 +37,6 @@ USER favicon
 EXPOSE 80
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost/favicon.ico || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost/healthz || exit 1
 
 CMD ["./favicon"]
